Fix not clipping the heading text

--- a/assets/sass/components/_typography.scss
+++ b/assets/sass/components/_typography.scss
@@ -96,7 +96,7 @@ th {
 .ellipsis {
   text-overflow: ellipsis;
   white-space: pre;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .is-link {
